tests/errors/syn.missing-rbrace.struct-def.or
main :: () -> void {
    array_t :: struct {
        x := 10;
    ;
};
